# nanochat

./: .gitignore  pyproject.toml
data/: __init__.py  batcher.py
model/: __init__.py  attention.py  blocks.py  llm.py  recurrence.py  rope.py
utils/: scheduler.py
